--- a/.github/workflows/openshift.yml
+++ b/.github/workflows/openshift.yml
@@ -38,7 +38,7 @@ jobs:
       with:
         oc: 4
 
-    # Build Docker image using the Dockerfile in your repository
+    # Build Docker image using the Dockerfile in the DrinkApp directory
     - name: Build Docker image using Buildah
       id: build-image
       uses: redhat-actions/buildah-build@v2
@@ -46,7 +46,7 @@ jobs:
         image: ${{ env.APP_NAME }}
         tags: ${{ env.IMAGE_TAGS }}
         dockerfiles: |
-          ./Dockerfile
+          ./DrinkApp/Dockerfile  # Updated path to Dockerfile
 
     # Push the built Docker image to Docker Hub or another container registry
     - name: Push Docker image to Docker Hub
