--- a/.github/workflows/openshift.yml
+++ b/.github/workflows/openshift.yml
@@ -88,7 +88,7 @@ jobs:
       run: |
         oc set env deployment/${{ env.APP_NAME }} dbkey=${{ secrets.dbkey }}
         oc set env deployment/${{ env.APP_NAME }} DBURI=${{ secrets.DBURI }}
-        oc set env deployment/${{ env.APP_NAME }} JwtKey=${{ secrets.JwtKey }}
+        oc set env deployment/${{ env.APP_NAME }} JwtKey=${{ secrets.JWTKEY }}
         oc set env deployment/${{ env.APP_NAME }} JwtIssuer=${{ secrets.JwtIssuer }}
         oc set env deployment/${{ env.APP_NAME }} JwtAudience=${{ secrets.JwtAudience }}
         oc set env deployment/${{ env.APP_NAME }} SENDGRID_API_KEY=${{ secrets.SENDGRID_API_KEY }}
