--- a/.github/workflows/openshift.yml
+++ b/.github/workflows/openshift.yml
@@ -1,6 +1,5 @@
 name: Build and Deploy to OpenShift
 
-# Trigger the workflow when there is a push to the main branch or manually
 on:
   push:
     branches: [ "main" ]
@@ -83,25 +82,23 @@ jobs:
       run: |
         oc rollout status deployment/${{ env.APP_NAME }} --watch
 
-    # Inject environment variables from GitHub Secrets into the OpenShift deployment (Batch 1)
-    - name: Set environment variables (Batch 1)
+    # Create ConfigMap with environment variables
+    - name: Create ConfigMap for environment variables
       run: |
-        oc set env deployment/${{ env.APP_NAME }} dbkey=${{ secrets.DBKEY }}
-        oc set env deployment/${{ env.APP_NAME }} DBURI=${{ secrets.DBURI }}
-        oc set env deployment/${{ env.APP_NAME }} DBName=${{ secrets.DBNAME }}
+        oc create configmap ${APP_NAME}-config \
+          --from-literal=DBKEY=${{ secrets.DBKEY }} \
+          --from-literal=DBURI=${{ secrets.DBURI }} \
+          --from-literal=DBNAME=${{ secrets.DBNAME }} \
+          --from-literal=Key=${{ secrets.KEY }} \
+          --from-literal=Issuer=${{ secrets.ISSUER }} \
+          --from-literal=Audience=${{ secrets.AUDIENCE }} \
+          --from-literal=SENDGRID_API_KEY=${{ secrets.SENDGRID_API_KEY }} \
+          --from-literal=SENDER_ADDRESS=${{ secrets.SENDER_ADDRESS }} --dry-run=client -o yaml | oc apply -f -
 
-    # Inject environment variables from GitHub Secrets into the OpenShift deployment (Batch 2)
-    - name: Set environment variables (Batch 2)
+    # Inject ConfigMap into the deployment
+    - name: Set deployment to use ConfigMap
       run: |
-        oc set env deployment/${{ env.APP_NAME }} Key=${{ secrets.KEY }}
-        oc set env deployment/${{ env.APP_NAME }} Issuer=${{ secrets.ISSUER }}
-        oc set env deployment/${{ env.APP_NAME }} Audience=${{ secrets.AUDIENCE }}
-
-    # Inject environment variables from GitHub Secrets into the OpenShift deployment (Batch 3)
-    - name: Set environment variables (Batch 3)
-      run: |
-        oc set env deployment/${{ env.APP_NAME }} SENDGRID_API_KEY=${{ secrets.SENDGRID_API_KEY }}
-        oc set env deployment/${{ env.APP_NAME }} SENDER_ADDRESS=${{ secrets.SENDER_ADDRESS }}
+        oc set env deployment/${{ env.APP_NAME }} --from=configmap/${APP_NAME}-config
 
     # Print out the exposed route (URL) for your deployed application
     - name: Print application URL
