--- a/.github/workflows/openshift.yml
+++ b/.github/workflows/openshift.yml
@@ -82,29 +82,17 @@ jobs:
       run: |
         oc rollout status deployment/${{ env.APP_NAME }} --watch
 
-    # Create ConfigMap with environment variables
-    - name: Create ConfigMap for environment variables
+    # Set environment variables directly in the OpenShift deployment
+    - name: Set environment variables in OpenShift deployment
       run: |
-        APP_NAME="${{ env.APP_NAME }}"
-        oc create configmap ${APP_NAME}-config \
-          --from-literal=DBKEY=${{ secrets.DBKEY }} \
-          --from-literal=DBURI=${{ secrets.DBURI }} \
-          --from-literal=DBNAME=${{ secrets.DBNAME }} \
-          --from-literal=Key=${{ secrets.KEY }} \
-          --from-literal=Issuer=${{ secrets.ISSUER }} \
-          --from-literal=Audience=${{ secrets.AUDIENCE }} \
-          --from-literal=SENDGRID_API_KEY=${{ secrets.SENDGRID_API_KEY }} \
-          --from-literal=SENDER_ADDRESS=${{ secrets.SENDER_ADDRESS }} --dry-run=client -o yaml | oc apply -f -
-      env:
-        APP_NAME: ${{ env.APP_NAME }}
-
-    # Inject ConfigMap into the deployment
-    - name: Set deployment to use ConfigMap
-      run: |
-        APP_NAME="${{ env.APP_NAME }}"
-        oc set env deployment/${APP_NAME} --from=configmap/${APP_NAME}-config
-      env:
-        APP_NAME: ${{ env.APP_NAME }}
+        oc set env deployment/${{ env.APP_NAME }} DBKEY=${{ secrets.DBKEY }}
+        oc set env deployment/${{ env.APP_NAME }} DBURI=${{ secrets.DBURI }}
+        oc set env deployment/${{ env.APP_NAME }} DBNAME=${{ secrets.DBNAME }}
+        oc set env deployment/${{ env.APP_NAME }} Key=${{ secrets.KEY }}
+        oc set env deployment/${{ env.APP_NAME }} Issuer=${{ secrets.ISSUER }}
+        oc set env deployment/${{ env.APP_NAME }} Audience=${{ secrets.AUDIENCE }}
+        oc set env deployment/${{ env.APP_NAME }} SENDGRID_API_KEY=${{ secrets.SENDGRID_API_KEY }}
+        oc set env deployment/${{ env.APP_NAME }} SENDER_ADDRESS=${{ secrets.SENDER_ADDRESS }}
 
     # Print out the exposed route (URL) for your deployed application
     - name: Print application URL
