--- a/.github/workflows/openshift.yml
+++ b/.github/workflows/openshift.yml
@@ -92,6 +92,12 @@ jobs:
     - name: Wait for Deployment Rollout
       run: |
         oc rollout status deployment/${{ env.APP_NAME }} --watch
+        
+    # Set up automatic rollback on failure
+    - name: Enable Deployment Rollback on Failure
+      run: |
+        oc annotate deployment/${{ env.APP_NAME }} deployment.openshift.io/strategy=Rolling
+        oc rollout undo deployment/${{ env.APP_NAME }} --to-revision=0
 
     # Inject environment variables into deployment
     - name: Set environment variables (Batch 1)
