--- a/DrinkApp/Dockerfile
+++ b/DrinkApp/Dockerfile
@@ -28,7 +28,7 @@ COPY --from=publish /app/publish .
 # Set ASPNETCORE_URLS to use port 8080 instead of 80
 ENV AzureWebJobsScriptRoot=/home/site/wwwroot \
     AzureFunctionsJobHost__Logging__Console__IsEnabled=true \
-    ASPNETCORE_URLS=https://+:8080 \
+    ASPNETCORE_URLS=http://+:8080 \
     dbkey="" \
     DBURI="" \
     DBName="DrinkAppDB" \
