--- a/.github/workflows/openshift.yml
+++ b/.github/workflows/openshift.yml
@@ -123,7 +123,11 @@ jobs:
       run: |
         oc set env deployment/${{ env.APP_NAME }} SENDGRID_API_KEY=${{ secrets.SENDGRID_API_KEY }}
         oc set env deployment/${{ env.APP_NAME }} SENDER_ADDRESS=${{ secrets.SENDER_ADDRESS }}
-
+    # Inject OpenApi__HostNames variable
+    - name: Set OpenAPI Hostnames
+      run: |
+        ROUTE=$(oc get route ${{ env.APP_NAME }} -o jsonpath='{.spec.host}')
+        oc set env deployment/${{ env.APP_NAME }} OpenApi__HostNames=$ROUTE
     # Print application URL
     - name: Print Application URL
       run: |
