--- a/.github/workflows/openshift.yml
+++ b/.github/workflows/openshift.yml
@@ -83,6 +83,12 @@ jobs:
       run: |
         oc set env deployment/${{ env.APP_NAME }} AzureFunctionsJobHost__Extensions__OpenApi__ForceHttps=true   
         
+    # Set OpenAPI Hostnames
+    - name: Set OpenAPI Hostnames
+      run: |
+        ROUTE=$(oc get route ${{ env.APP_NAME }} -o jsonpath='{.spec.host}')
+        oc set env deployment/${{ env.APP_NAME }} OpenApi__HostNames=https://$ROUTE      
+        
     # Enable HTTPS (TLS Edge Termination) and optional HTTP-to-HTTPS redirection
     - name: Enable HTTPS for the Route
       run: |
