--- a/.github/workflows/openshift.yml
+++ b/.github/workflows/openshift.yml
@@ -78,24 +78,19 @@ jobs:
         namespace: ${{ env.OPENSHIFT_NAMESPACE }}
         port: ${{ env.APP_PORT }}
         
-    # Set OpenAPI HTTPS
-    - name: Set OpenAPI HTTPS
-      run: |
-        oc set env deployment/${{ env.APP_NAME }} AzureFunctionsJobHost__Extensions__OpenApi__ForceHttps=true   
-        
-    # Set OpenAPI Hostnames
-    - name: Set OpenAPI Hostnames
-      run: |
-        ROUTE=$(oc get route ${{ env.APP_NAME }} -o jsonpath='{.spec.host}')
-        oc set env deployment/${{ env.APP_NAME }} OpenApi__HostNames=https://$ROUTE      
-        
-    # Enable HTTPS (TLS Edge Termination) and optional HTTP-to-HTTPS redirection
     - name: Enable HTTPS for the Route
       run: |
-        # Patch the route to enable TLS edge termination
         oc patch route ${{ env.APP_NAME }} -n ${{ env.OPENSHIFT_NAMESPACE }} -p '{"spec":{"tls":{"termination":"edge"}}}'
-        # Optional: Redirect HTTP traffic to HTTPS
-        oc annotate route ${{ env.APP_NAME }} haproxy.router.openshift.io/redirect-to-https=true --overwrite      
+        oc annotate route ${{ env.APP_NAME }} haproxy.router.openshift.io/redirect-to-https=true --overwrite
+
+    - name: Set OpenAPI Hostnames (HTTPS)
+      run: |
+        ROUTE=$(oc get route ${{ env.APP_NAME }} -o jsonpath='{.spec.host}')
+        oc set env deployment/${{ env.APP_NAME }} OpenApi__HostNames=https://$ROUTE
+
+    - name: Set environment variables for HTTPS
+      run: |
+        oc set env deployment/${{ env.APP_NAME }} AzureFunctionsJobHost__Extensions__OpenApi__ForceHttps=true    
         
     # Scale the application to ensure multiple pods for load balancing
     - name: Scale Deployment
