--- a/.github/workflows/openshift.yml
+++ b/.github/workflows/openshift.yml
@@ -5,141 +5,136 @@ on:
   workflow_dispatch:
 
 env:
-  # Secrets for OpenShift access
   OPENSHIFT_SERVER: ${{ secrets.OPENSHIFT_SERVER }}
   OPENSHIFT_TOKEN: ${{ secrets.OPENSHIFT_TOKEN }}
-  OPENSHIFT_NAMESPACE: "kilo-dev" # Change to your namespace
-  APP_NAME: "my-azure-function" # Change to your app name
+  APP_NAME: "my-azure-function" # Application name
   APP_PORT: "8080" # Port your app listens to
   IMAGE_REGISTRY: "docker.io/mridul017" # Docker Hub username or other registry
-  IMAGE_REGISTRY_USER: "mridul017" # Docker Hub username
+  IMAGE_REGISTRY_USER: "mridul017"
   IMAGE_REGISTRY_PASSWORD: ${{ secrets.IMAGE_REGISTRY_PASSWORD }}
-
-  # Default tag using git commit hash for better versioning
-  IMAGE_TAGS: ${{ github.sha }}
+  IMAGE_TAGS: ${{ github.sha }} # Default tag using git commit hash
 
 jobs:
-  build-and-deploy:
-    name: Build and Deploy to OpenShift
+  build-and-push:
+    name: Build and Push Docker Image
     runs-on: ubuntu-20.04
 
     steps:
-    # Checkout repository
-    - name: Check out the repository
-      uses: actions/checkout@v4
+      # Checkout repository
+      - name: Check out the repository
+        uses: actions/checkout@v4
 
-    # Set up Docker Buildx
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+      # Set up Docker Buildx
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-    # Install oc CLI (OpenShift)
-    - name: Install oc CLI (OpenShift)
-      uses: redhat-actions/openshift-tools-installer@v1
-      with:
-        oc: 4.6.0
+      # Install oc CLI (OpenShift)
+      - name: Install oc CLI (OpenShift)
+        uses: redhat-actions/openshift-tools-installer@v1
+        with:
+          oc: 4.6.0
 
-    # Build Docker image using Buildah
-    - name: Build Docker image using Buildah
-      id: build-image
-      uses: redhat-actions/buildah-build@v2
-      with:
-        image: ${{ env.APP_NAME }}
-        tags: ${{ env.IMAGE_TAGS }}
-        dockerfiles: ./DrinkApp/Dockerfile  # Correct path to Dockerfile
-        context: ./DrinkApp
+      # Build Docker image using Buildah
+      - name: Build Docker image using Buildah
+        id: build-image
+        uses: redhat-actions/buildah-build@v2
+        with:
+          image: ${{ env.APP_NAME }}
+          tags: ${{ env.IMAGE_TAGS }}
+          dockerfiles: ./DrinkApp/Dockerfile  # Correct path to Dockerfile
+          context: ./DrinkApp
 
-    # Push the built Docker image to Docker Hub
-    - name: Push Docker image to Docker Hub
-      id: push-image
-      uses: redhat-actions/push-to-registry@v2
-      with:
-        image: ${{ steps.build-image.outputs.image }}
-        tags: ${{ steps.build-image.outputs.tags }}
-        registry: ${{ env.IMAGE_REGISTRY }}
-        username: ${{ env.IMAGE_REGISTRY_USER }}
-        password: ${{ secrets.IMAGE_REGISTRY_PASSWORD }}
+      # Push the built Docker image to Docker Hub
+      - name: Push Docker image to Docker Hub
+        id: push-image
+        uses: redhat-actions/push-to-registry@v2
+        with:
+          image: ${{ steps.build-image.outputs.image }}
+          tags: ${{ steps.build-image.outputs.tags }}
+          registry: ${{ env.IMAGE_REGISTRY }}
+          username: ${{ env.IMAGE_REGISTRY_USER }}
+          password: ${{ secrets.IMAGE_REGISTRY_PASSWORD }}
 
-    # Log in to OpenShift
-    - name: Log in to OpenShift
-      uses: redhat-actions/oc-login@v1
-      with:
-        openshift_server_url: ${{ env.OPENSHIFT_SERVER }}
-        openshift_token: ${{ secrets.OPENSHIFT_TOKEN }}
-        insecure_skip_tls_verify: true
-        namespace: ${{ env.OPENSHIFT_NAMESPACE }}
+  deploy-to-namespaces:
+    name: Deploy to All OpenShift Namespaces
+    needs: build-and-push
+    runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        namespace: [ "kilo-dev", "kilo-qa", "kilo-prod" ] # Deploy to these namespaces
 
-    # Deploy the application and expose as a service
-    - name: Create and expose OpenShift app
-      id: deploy-and-expose
-      uses: redhat-actions/oc-new-app@v1
-      with:
-        app_name: ${{ env.APP_NAME }}
-        image: ${{ steps.push-image.outputs.registry-path }}
-        namespace: ${{ env.OPENSHIFT_NAMESPACE }}
-        port: ${{ env.APP_PORT }}
-        
-    - name: Enable HTTPS for the Route
-      run: |
-        oc patch route ${{ env.APP_NAME }} -n ${{ env.OPENSHIFT_NAMESPACE }} -p '{"spec":{"tls":{"termination":"edge"}}}'
-        oc annotate route ${{ env.APP_NAME }} haproxy.router.openshift.io/redirect-to-https=true --overwrite
+    env:
+      OPENSHIFT_NAMESPACE: ${{ matrix.namespace }}
 
-    - name: Set OpenAPI Hostnames (HTTPS)
-      run: |
-        ROUTE=$(oc get route ${{ env.APP_NAME }} -o jsonpath='{.spec.host}')
-        oc set env deployment/${{ env.APP_NAME }} OpenApi__HostNames=https://$ROUTE
+    steps:
+      # Log in to OpenShift
+      - name: Log in to OpenShift
+        uses: redhat-actions/oc-login@v1
+        with:
+          openshift_server_url: ${{ env.OPENSHIFT_SERVER }}
+          openshift_token: ${{ secrets.OPENSHIFT_TOKEN }}
+          insecure_skip_tls_verify: true
+          namespace: ${{ env.OPENSHIFT_NAMESPACE }}
 
-    - name: Set environment variables for HTTPS
-      run: |
-        oc set env deployment/${{ env.APP_NAME }} AzureFunctionsJobHost__Extensions__OpenApi__ForceHttps=true    
-        
-    # Scale the application to ensure multiple pods for load balancing
-    - name: Scale Deployment
-      run: |
-        oc scale deployment/${{ env.APP_NAME }} --replicas=0
+      # Deploy and expose application
+      - name: Create and expose OpenShift app
+        id: deploy-and-expose
+        uses: redhat-actions/oc-new-app@v1
+        with:
+          app_name: ${{ env.APP_NAME }}
+          image: ${{ needs.build-and-push.outputs.image }}
+          namespace: ${{ env.OPENSHIFT_NAMESPACE }}
+          port: ${{ env.APP_PORT }}
 
-    # Set up Horizontal Pod Autoscaler (HPA)
-    - name: Configure Horizontal Pod Autoscaler
-      run: |
-        # Delete the existing Horizontal Pod Autoscaler if it exists
-        if oc get hpa ${{ env.APP_NAME }} &>/dev/null; then
-          echo "Horizontal Pod Autoscaler already exists. Deleting it."
-          oc delete hpa ${{ env.APP_NAME }}
-        fi
-        # Create the new Horizontal Pod Autoscaler
-        echo "Creating Horizontal Pod Autoscaler."
-        oc autoscale deployment/${{ env.APP_NAME }} --min=1 --max=5 --cpu-percent=70
-        
-    # Wait for deployment rollout
-    - name: Wait for Deployment Rollout
-      run: |
-        oc rollout status deployment/${{ env.APP_NAME }} --watch
-        
-    # Set up automatic rollback on failure
-    - name: Enable Deployment Rollback on Failure
-      run: |
-        oc annotate deployment/${{ env.APP_NAME }} deployment.openshift.io/strategy=Rolling
-        oc rollout undo deployment/${{ env.APP_NAME }} --to-revision=0
+      # Enable HTTPS for the Route
+      - name: Enable HTTPS for the Route
+        run: |
+          oc patch route ${{ env.APP_NAME }} -n ${{ env.OPENSHIFT_NAMESPACE }} -p '{"spec":{"tls":{"termination":"edge"}}}'
+          oc annotate route ${{ env.APP_NAME }} haproxy.router.openshift.io/redirect-to-https=true --overwrite
 
-    # Inject environment variables into deployment
-    - name: Set environment variables (Batch 1)
-      run: |
-        oc set env deployment/${{ env.APP_NAME }} dbkey=${{ secrets.DBKEY }}
-        oc set env deployment/${{ env.APP_NAME }} DBURI=${{ secrets.DBURI }}
-        oc set env deployment/${{ env.APP_NAME }} DBName=${{ secrets.DBNAME }}
+      # Set OpenAPI Hostnames (HTTPS)
+      - name: Set OpenAPI Hostnames (HTTPS)
+        run: |
+          ROUTE=$(oc get route ${{ env.APP_NAME }} -o jsonpath='{.spec.host}')
+          oc set env deployment/${{ env.APP_NAME }} OpenApi__HostNames=https://$ROUTE
 
-    - name: Set environment variables (Batch 2)
-      run: |
-        oc set env deployment/${{ env.APP_NAME }} Key="${{ secrets.KEY }}"
-        oc set env deployment/${{ env.APP_NAME }} Issuer="${{ secrets.ISSUER }}"
-        oc set env deployment/${{ env.APP_NAME }} Audience="${{ secrets.AUDIENCE }}"
+      # Set environment variables for HTTPS
+      - name: Set environment variables for HTTPS
+        run: |
+          oc set env deployment/${{ env.APP_NAME }} AzureFunctionsJobHost__Extensions__OpenApi__ForceHttps=true    
 
-    - name: Set environment variables (Batch 3)
-      run: |
-        oc set env deployment/${{ env.APP_NAME }} SENDGRID_API_KEY=${{ secrets.SENDGRID_API_KEY }}
-        oc set env deployment/${{ env.APP_NAME }} SENDER_ADDRESS=${{ secrets.SENDER_ADDRESS }}
+      # Scale the application to ensure multiple pods for load balancing
+      - name: Scale Deployment
+        run: |
+          oc scale deployment/${{ env.APP_NAME }} --replicas=3
 
-    # Print application URL
-    - name: Print Application URL
-      run: |
-        ROUTE=$(oc get route ${{ env.APP_NAME }} -o jsonpath='{.spec.host}')
-        echo "Your app is available at: http://$ROUTE"
+      # Set up Horizontal Pod Autoscaler (HPA)
+      - name: Configure Horizontal Pod Autoscaler
+        run: |
+          if oc get hpa ${{ env.APP_NAME }} -n ${{ env.OPENSHIFT_NAMESPACE }} &>/dev/null; then
+            oc delete hpa ${{ env.APP_NAME }} -n ${{ env.OPENSHIFT_NAMESPACE }}
+          fi
+          oc autoscale deployment/${{ env.APP_NAME }} --min=3 --max=10 --cpu-percent=70 -n ${{ env.OPENSHIFT_NAMESPACE }}
+
+      # Wait for deployment rollout
+      - name: Wait for Deployment Rollout
+        run: |
+          oc rollout status deployment/${{ env.APP_NAME }} --watch -n ${{ env.OPENSHIFT_NAMESPACE }}
+
+      # Inject environment variables into deployment
+      - name: Set environment variables
+        run: |
+          oc set env deployment/${{ env.APP_NAME }} dbkey=${{ secrets.DBKEY }} -n ${{ env.OPENSHIFT_NAMESPACE }}
+          oc set env deployment/${{ env.APP_NAME }} DBURI=${{ secrets.DBURI }} -n ${{ env.OPENSHIFT_NAMESPACE }}
+          oc set env deployment/${{ env.APP_NAME }} DBName=${{ secrets.DBNAME }} -n ${{ env.OPENSHIFT_NAMESPACE }}
+          oc set env deployment/${{ env.APP_NAME }} Key="${{ secrets.KEY }}" -n ${{ env.OPENSHIFT_NAMESPACE }}
+          oc set env deployment/${{ env.APP_NAME }} Issuer="${{ secrets.ISSUER }}" -n ${{ env.OPENSHIFT_NAMESPACE }}
+          oc set env deployment/${{ env.APP_NAME }} Audience="${{ secrets.AUDIENCE }}" -n ${{ env.OPENSHIFT_NAMESPACE }}
+          oc set env deployment/${{ env.APP_NAME }} SENDGRID_API_KEY=${{ secrets.SENDGRID_API_KEY }} -n ${{ env.OPENSHIFT_NAMESPACE }}
+          oc set env deployment/${{ env.APP_NAME }} SENDER_ADDRESS=${{ secrets.SENDER_ADDRESS }} -n ${{ env.OPENSHIFT_NAMESPACE }}
+
+      # Print application URL
+      - name: Print Application URL
+        run: |
+          ROUTE=$(oc get route ${{ env.APP_NAME }} -n ${{ env.OPENSHIFT_NAMESPACE }} -o jsonpath='{.spec.host}')
+          echo "Your app is available at: https://$ROUTE"
