--- a/.github/workflows/openshift.yml
+++ b/.github/workflows/openshift.yml
@@ -76,15 +76,17 @@ jobs:
           insecure_skip_tls_verify: true
           namespace: ${{ env.OPENSHIFT_NAMESPACE }}
 
+      # Debug Image Path (optional for troubleshooting)
+      - name: Debug Image Path
+        run: echo "Image path: ${{ steps.push-image.outputs.image }}"
+
       # Deploy and expose application
       - name: Create and expose OpenShift app
         id: deploy-and-expose
-        uses: redhat-actions/oc-new-app@v1
-        with:
-          app_name: ${{ env.APP_NAME }}
-          image: ${{ needs.build-and-push.outputs.image }}
-          namespace: ${{ env.OPENSHIFT_NAMESPACE }}
-          port: ${{ env.APP_PORT }}
+        run: |
+          IMAGE_PATH="${{ steps.push-image.outputs.image }}:${{ env.IMAGE_TAGS }}"
+          echo "Using image path: $IMAGE_PATH"
+          oc new-app --name=${{ env.APP_NAME }} --labels=app=${{ env.APP_NAME }} --image=${IMAGE_PATH} --namespace=${{ env.OPENSHIFT_NAMESPACE }} --port=${{ env.APP_PORT }}
 
       # Enable HTTPS for the Route
       - name: Enable HTTPS for the Route
