--- a/.github/workflows/openshift.yml
+++ b/.github/workflows/openshift.yml
@@ -9,7 +9,7 @@ env:
   OPENSHIFT_TOKEN: ${{ secrets.OPENSHIFT_TOKEN }}
   APP_NAME: "my-azure-function" # Application name
   APP_PORT: "8080" # Port your app listens to
-  IMAGE_REGISTRY: "docker.io/mridul017" # Docker Hub username or other registry
+  IMAGE_REGISTRY: "docker.io" # Docker Hub username or other registry
   IMAGE_REGISTRY_USER: "mridul017"
   IMAGE_REGISTRY_PASSWORD: ${{ secrets.IMAGE_REGISTRY_PASSWORD }}
   IMAGE_TAGS: ${{ github.sha }} # Default tag using git commit hash
