--- a/.github/workflows/openshift.yml
+++ b/.github/workflows/openshift.yml
@@ -79,7 +79,9 @@ jobs:
       # Clean up old deployments
       - name: Clean up old deployments and ReplicaSets
         run: |
-          oc delete deployment/${{ env.APP_NAME }} -n ${{ env.OPENSHIFT_NAMESPACE }} --ignore-not-found
+          # Clean up old resources if they exist
+          oc delete service/${{ env.APP_NAME }} --ignore-not-found -n ${{ env.OPENSHIFT_NAMESPACE }}
+          oc delete deployment/${{ env.APP_NAME }} --ignore-not-found -n ${{ env.OPENSHIFT_NAMESPACE }}
           oc delete replicasets -l app=${{ env.APP_NAME }} -n ${{ env.OPENSHIFT_NAMESPACE }} --ignore-not-found
           
       # Step 9: Deploy and Expose OpenShift App
