--- a/.github/workflows/openshift.yml
+++ b/.github/workflows/openshift.yml
@@ -88,7 +88,7 @@ jobs:
       - name: Deploy OpenShift App
         run: |
           # Deploy the application from the Docker image
-          oc new-app ${{ env.IMAGE_REGISTRY_USER }}/${{ env.APP_NAME }}:${{ env.IMAGE_TAGS }} \
+          oc new-app ${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_REGISTRY_USER }}/${{ env.APP_NAME }}:${{ env.IMAGE_TAGS }} \
             --name=${{ env.APP_NAME }} \
             -n ${{ env.OPENSHIFT_NAMESPACE }}
             
