--- a/.github/workflows/openshift.yml
+++ b/.github/workflows/openshift.yml
@@ -111,7 +111,7 @@ jobs:
       - name: Configure CORS
         run: |
           oc annotate route ${{ env.APP_NAME }} \
-            haproxy.router.openshift.io/cors-allow-origin="https://your-frontend-domain.com" \
+            haproxy.router.openshift.io/cors-allow-origin="*" \
             haproxy.router.openshift.io/cors-allow-methods="GET, POST, PUT, DELETE, OPTIONS" \
             haproxy.router.openshift.io/cors-allow-headers="Authorization, Content-Type" \
             --overwrite
